Fixed bug causing controls to be overlapped by code mirror scroll
This happened after google chrome update

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Exercise/Controls/Controls.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Exercise/Controls/Controls.less
@@ -5,6 +5,7 @@
 @controlsMargin: 12px;
 
 .exerciseControlsContainer {
+  position: relative;
   display: inline-flex;
   align-items: baseline;
   width: 100%;
